--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Game</title>
   <script src="keyboarder.js"></script>
 </head>
 <body>
-  
+    <style>
+        body {
+          background-color: white;
+        }
+        .game {
+          width: 600px;
+          height: 600px;
+          margin: 20px auto;
+          background-color: pink;
+        }
+      </style>
+
+  <div class="game">
+    <canvas id="gameCanvas" width="600" height="600"></canvas>
+    </div>
 </body>
 </html>
